--- a/tableaux/tableau-fr.html
+++ b/tableaux/tableau-fr.html
@@ -18,8 +18,145 @@
     <th>4</th><th>https://ant-france.eu/index.php/ressources/glossaire/</th><th>200</th><th>UTF-8</th>
     </tr>
 <tr>
-    <th>5</th><th>https://www.dalloz-actualite.fr/flash/parente-transgenre-une-decision-inedite</th><th>200</th><th>utf-8</th>
+    <th>5</th><th>https://www.psychologue.net/articles/que-signifie-etre-transgenre</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>6</th><th>https://www.leparisien.fr/societe/hommes-ou-femmes-transgenres-qu-est-ce-que-la-transidentite-23-04-2019-8058435.php</th><th>200</th><th>utf-8</th>
+    </tr>
+<tr>
+    <th>7</th><th>https://www.lejdd.fr/Societe/L-amour-quand-on-est-transgenre-Je-voulais-une-relation-de-couple-banale-858257</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>8</th><th>https://www.caf.fr/allocataires/vies-de-famille/articles/mon-enfant-est-transgenre-comment-bien-l-accompagner</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>9</th><th>https://www.vie-publique.fr/rapport/284386-transexualite-sante-et-parcours-de-soins-des-personnes-trans</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>10</th><th>https://www.maisonmedicale.org/les-personnes-transgenres-et-intersexes/</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>11</th><th>https://www.capital.fr/economie-politique/transgenre-fluide-intersexe-les-mots-nouveaux-du-lexique-des-genres-1248315</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>12</th><th>https://www.lepoint.fr/culture/le-destin-tragique-du-premier-transgenre-de-l-histoire-de-france-19-01-2022-2461225_3.php#11</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>13</th><th>https://fra.europa.eu/fr/news/2014/que-signifie-etre-transgenre-dans-lue-aujourdhui</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>14</th><th>https://www.lemonde.fr/idees/article/2023/05/24/transitude-un-nouveau-terme-pour-decrire-le-fait-d-etre-transgenre_6174702_3232.html</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>15</th><th>https://news.un.org/fr/tags/transgenre</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>16</th><th>https://www.lalanguefrancaise.com/dictionnaire/definition/transgenre</th><th>200</th><th>utf-8</th>
+    </tr>
+<tr>
+    <th>17</th><th>https://www.rcf.fr/articles/economie-et-societe/transgenre-et-transidentite-de-quoi-parleton</th><th>200</th><th>utf-8</th>
+    </tr>
+<tr>
+    <th>18</th><th>https://igvm-iefh.belgium.be/fr/activites/personnes_transgenres_et_intersexes/personnes_transgenres</th><th>200</th><th>utf-8</th>
+    </tr>
+<tr>
+    <th>19</th><th>https://www.service-public.fr/particuliers/actualites/A16189</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>20</th><th>https://start.lesechos.fr/travailler-mieux/vie-entreprise/transgenre-et-travail-comment-mon-entreprise-ma-accompagnee-dans-ma-transition-1354913</th><th>200</th><th>utf-8</th>
+    </tr>
+<tr>
+    <th>21</th><th>https://www.thecanadianencyclopedia.ca/fr/article/transgenre</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>22</th><th>https://www.programme-tv.net/tag/transgenre/</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>23</th><th>https://magazin.epjt.fr/transgenre-et-feministe</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>24</th><th>https://fr.euronews.com/tag/transgenre</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>25</th><th>https://info.medadom.com/sante_decomplexee/transidentite-definition</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>26</th><th>https://usito.usherbrooke.ca/d%C3%A9finitions/transgenre</th><th>200</th><th>utf-8</th>
+    </tr>
+<tr>
+    <th>27</th><th>https://www.mariefrance.fr/insolite/transgenre-ces-celebrites-que-vous-devriez-absolument-connaitre-728282.html</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>28</th><th>https://www.univadis.fr/viewarticle/etes-vous-gender-fluide-transgenre-ou-cisgenre-732199</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>29</th><th>https://vivre-trans.fr/cisgenre-transgenre-la-difference/</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>30</th><th>https://www.valeursactuelles.com/clubvaleurs/societe/transgenre-aux-sources-dun-delire-societal</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>31</th><th>https://www.ladn.eu/tag/transgenre/</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>32</th><th>https://www.accesauxdroits.org/index.php/content_page/item/568-association-nationale-transgenre</th><th>200</th><th>utf-8</th>
+    </tr>
+<tr>
+    <th>33</th><th>https://www.etudiant.gouv.fr/fr/ce-qui-change-pour-les-etudiants-transgenres-829</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>34</th><th>https://cliniquepsychologiequebec.com/identite-de-genre-transgenre-lgbt-portrait-dun-eventail-de-possibilites/</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>35</th><th>https://lespotiches.com/culture/comprendre/definition-transgenre-cisgenre-qu-est-ce-que-ca-veut-dire/</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>36</th><th>https://fr.wiktionary.org/wiki/transgenre</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>37</th><th>https://www.hachette.fr/tops-selections/journee-internationale-de-visibilite-transgenre-10-livres-autour-de-la-transidentite</th><th>200</th><th>utf-8</th>
+    </tr>
+<tr>
+    <th>38</th><th>https://www.genethique.org/transgenre-un-marche-de-plusieurs-milliards-de-dollars/</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>39</th><th>https://dumas.ccsd.cnrs.fr/TRANSGENRE/</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>40</th><th>https://dailyscience.be/30/05/2018/le-transgenderisme-est-inscrit-dans-le-cerveau-des-le-plus-jeune-age/</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>41</th><th>https://www.doctrine.fr/t/transgenre</th><th>200</th><th>utf-8</th>
+    </tr>
+<tr>
+    <th>42</th><th>https://dictionnaire.orthodidacte.com/article/definition-transgenre</th><th>200</th><th>utf-8</th>
+    </tr>
+<tr>
+    <th>43</th><th>https://www.arkhe-editions.com/magazine/breve-histoire-transgenre-du-moyen-age/</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>44</th><th>https://fr.wikihow.com/respecter-une-personne-transgenre</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>45</th><th>https://www.grazia.fr/news-et-societe/news/le-genre-ideal-la-nouvelle-generation-transgenre-sexprime-enfin-216343.html</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>46</th><th>https://www.lhistoire.fr/%C3%AAtre-transgenre-au-moyen-age</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>47</th><th>https://www.lunion.fr/id520230/article/2023-09-13/polemique-un-gynecologue-refuse-dexaminer-une-femme-transgenre-et-affirme</th><th>200</th><th>utf-8</th>
+    </tr>
+<tr>
+    <th>48</th><th>https://www.dalloz-actualite.fr/flash/parente-transgenre-une-decision-inedite</th><th>200</th><th>utf-8</th>
+    </tr>
+<tr>
+    <th>49</th><th>https://epsetsociete.fr/quelle-place-donner-a-un-e-eleve-intersexe-ou-transgenre-en-eps/</th><th>200</th><th>UTF-8</th>
+    </tr>
+<tr>
+    <th>50</th><th>https://www.lamontagne.fr/clermont-ferrand-63000/actualites/alan-jeune-homme-transgenre-je-suis-fier-de-moi_14256515/</th><th>200</th><th>UTF-8</th>
     </tr>
 </table>
 </body>
 </html>
+
+test
