exo anglais(sauf concordance)

--- a/aspirations/fich-anglais-44.html
+++ b/aspirations/fich-anglais-44.html
@@ -1097,7 +1097,7 @@ _paq.push(["setDocumentTitle", document.domain + "/" + document.title]);if (!win
   
     
 </div>
-<div data-drupal-selector="edit-actions" class="form-actions js-form-wrapper form-wrapper" id="edit-actions--2"><button data-drupal-selector="edit-submit" class="icon-only search button js-form-submit form-submit" type="submit" id="edit-submit" value="Search">Search</button>
+<div data-drupal-selector="edit-actions" class="form-actions js-form-wrapper form-wrapper" id="edit-actions"><button data-drupal-selector="edit-submit" class="icon-only search button js-form-submit form-submit" type="submit" id="edit-submit" value="Search">Search</button>
 </div>
 
 </form>
@@ -1270,7 +1270,7 @@ _paq.push(["setDocumentTitle", document.domain + "/" + document.title]);if (!win
             <dt  class="field__label field-label-inline">Filed under</dt>
   
                           <dd  >
-      <div class="views-element-container"><div class="view view-glossary-and-thesaurus view-id-glossary_and_thesaurus view-display-id-embed_classification js-view-dom-id-e67629e551f677ba62eb803b4767dc6398e974982928a9acb543d78bb4ed331d">
+      <div class="views-element-container"><div class="view view-glossary-and-thesaurus view-id-glossary_and_thesaurus view-display-id-embed_classification js-view-dom-id-bcf07230d91c8e27ece00513ff6a8a99dc43438b6004cd031b53e13be4df12cc">
   
     
 
