--- a/aspirations/en/fich-anglais-18.html
+++ b/aspirations/en/fich-anglais-18.html
@@ -24,7 +24,7 @@
         
 		<style type="text/css">.wpfts-result-item .wpfts-smart-excerpt {}.wpfts-result-item .wpfts-not-found {color:#808080;font-size:0.9em;}.wpfts-result-item .wpfts-score {color:#006621;font-size:0.9em;}.wpfts-shift {margin-left:40px;}.wpfts-result-item .wpfts-download-link {color:#006621;font-size:0.9em;}.wpfts-result-item .wpfts-file-size {color:#006621;font-size:0.9em;}</style><meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
 
-	<!-- This site is optimized with the Yoast SEO Premium plugin v21.5 (Yoast SEO v21.5) - https://yoast.com/wordpress/plugins/seo/ -->
+	<!-- This site is optimized with the Yoast SEO Premium plugin v21.6 (Yoast SEO v21.6) - https://yoast.com/wordpress/plugins/seo/ -->
 	<link rel="canonical" href="https://williamsinstitute.law.ucla.edu/publications/trans-adults-united-states/" />
 	<meta property="og:locale" content="en_US" />
 	<meta property="og:type" content="article" />
@@ -679,7 +679,7 @@ border-bottom: none;
                             
 <div class="wpcf7 no-js" id="wpcf7-f3100-o1" lang="en-US" dir="ltr">
 <div class="screen-reader-response"><p role="status" aria-live="polite" aria-atomic="true"></p> <ul></ul></div>
-<form action="/publications/trans-adults-united-states/#wpcf7-f3100-o1" method="post" class="wpcf7-form init chimpmatic-1.3.6 mailchimp-ext-0.5.70" aria-label="Contact form" novalidate="novalidate" data-status="init">
+<form action="/publications/trans-adults-united-states/#wpcf7-f3100-o1" method="post" class="wpcf7-form init mailchimp-ext-0.5.70" aria-label="Contact form" novalidate="novalidate" data-status="init">
 <div style="display: none;">
 <input type="hidden" name="_wpcf7" value="3100" />
 <input type="hidden" name="_wpcf7_version" value="5.8.3" />
@@ -743,7 +743,7 @@ border-bottom: none;
 						contactform.push(innerVal);
 						var innerVal = [3100,'gdpr',''];
 						contactform.push(innerVal);
-						</script><div class="wpcf7-response-output" aria-hidden="true"></div><p style="display: none !important"><span class="wpcf7-form-control-wrap referer-page"><input type="hidden" name="referer-page" value="https://www.google.com/" data-value="https://www.google.com/" class="wpcf7-form-control wpcf7-text referer-page" aria-invalid="false"></span></p>
+						</script><div class="wpcf7-response-output" aria-hidden="true"></div><p style="display: none !important"><span class="wpcf7-form-control-wrap referer-page"><input type="hidden" name="referer-page" value="http://Direct%20Visit" data-value="http://Direct%20Visit" class="wpcf7-form-control wpcf7-text referer-page" aria-invalid="false"></span></p>
 <!-- Chimpmatic extension by Renzo Johnson -->
 </form>
 </div>
