--- a/aspirations/en/fich-anglais-4.html
+++ b/aspirations/en/fich-anglais-4.html
@@ -3538,7 +3538,7 @@ window.scope_array = [];
 //               if(regVariant === 'ownid-account-auth-button'){
 //                 regVariant = 'ownid-auth-button';
 //                 document.getElementById('reg_password').style = 'display:none;';
-//                 document.getElementById('reg_password').value = 'H&nnT%4kR0ZD'
+//                 document.getElementById('reg_password').value = '4!ma3d2w!^y('
 //                 document.querySelector('.woocommerce-form-register > p > label[for="reg_password"]').remove();
 //                 regInfoTooltip = false;
 //               }
@@ -3568,12 +3568,12 @@ window.scope_array = [];
 <!--
 Performance optimized by W3 Total Cache. Learn more: https://www.boldgrid.com/w3-total-cache/
 
-Object Caching 579/869 objects using Memcached
+Object Caching 587/834 objects using Memcached
 Page Caching using Disk: Enhanced 
 Lazy Loading
 Minified using Memcached
 Database Caching using Memcached (Request-wide modification query)
-Fragment Caching 20/36 fragments using Memcached
+Fragment Caching 21/36 fragments using Memcached
 
-Served from: glaad.org @ 2023-11-29 02:02:33 by W3 Total Cache
+Served from: glaad.org @ 2023-11-29 04:02:21 by W3 Total Cache
 -->
