maj script tableaux

--- a/tableaux/fr.html
+++ b/tableaux/fr.html
@@ -3,7 +3,7 @@
 <meta charset=UTF-8/>
 </head>
 <body>
-<table>
+<table border='1'>
 <tr><th>Ligne</th><th>URL</th><th>Code HTTP</th><th>Encodage</th><th>Compte</th><th>Contexte</th><th>Aspirations</th><th>Dump</th></tr>
 <tr>
     <td>1</td><td>https://www.amnesty.fr/focus/transgenre</td><td>200</td><td>utf-8</td><td>      17</td><td><a href=./../contextes/fr/fr-1.txt>Contexte1</a></td><td><a href=./../aspirations/fr/fr-1.html>Aspiration1</a></td><td><a href=./../dumps-text/fr/fr-1.txt>Dump1</a></td>
@@ -15,7 +15,7 @@
     <td>3</td><td>https://www.institutobernabeu.com/fr/blog/preservation-de-la-fertilite-chez-les-personnes-transgenres/</td><td>200</td><td>UTF-8</td><td>      10</td><td><a href=./../contextes/fr/fr-3.txt>Contexte3</a></td><td><a href=./../aspirations/fr/fr-3.html>Aspiration3</a></td><td><a href=./../dumps-text/fr/fr-3.txt>Dump3</a></td>
     </tr>
 <tr>
-    <td>4</td><td>https://ant-france.eu/index.php/ressources/glossaire/</td><td>500</td><td>UTF-8</td><td>       0</td><td><a href=./../contextes/fr/fr-4.txt>Contexte4</a></td><td><a href=./../aspirations/fr/fr-4.html>Aspiration4</a></td><td><a href=./../dumps-text/fr/fr-4.txt>Dump4</a></td>
+    <td>4</td><td>https://ant-france.eu/index.php/ressources/glossaire/</td><td>200</td><td>UTF-8</td><td>       0</td><td><a href=./../contextes/fr/fr-4.txt>Contexte4</a></td><td><a href=./../aspirations/fr/fr-4.html>Aspiration4</a></td><td><a href=./../dumps-text/fr/fr-4.txt>Dump4</a></td>
     </tr>
 <tr>
     <td>5</td><td>https://www.psychologue.net/articles/que-signifie-etre-transgenre</td><td>200</td><td>UTF-8</td><td>      24</td><td><a href=./../contextes/fr/fr-5.txt>Contexte5</a></td><td><a href=./../aspirations/fr/fr-5.html>Aspiration5</a></td><td><a href=./../dumps-text/fr/fr-5.txt>Dump5</a></td>
